<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/mainColorDarked"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sofadi_one"
            android:text="BURGIR"
            android:textColor="@color/writingColor1"
            android:textSize="26sp"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="14dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/title"
        android:textColor="@color/writingColor3"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/oldschoolburgir" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/cheese"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/mainColor"
        app:chipStrokeColor="@color/mainColor"
        app:layout_constraintEnd_toStartOf="@+id/chip2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/LTO"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/mainColor"
        app:chipStrokeColor="@color/mainColor"
        app:layout_constraintEnd_toStartOf="@+id/chip3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip3"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/mushroom"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/mainColor"
        app:chipStrokeColor="@color/mainColor"
        app:layout_constraintEnd_toStartOf="@+id/chip4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip4"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/onion"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/mainColor"
        app:chipStrokeColor="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/time"
        android:textColor="@color/writingColor1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/delivery"
        android:textColor="@color/writingColor3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/comment"
        android:textAlignment="center"
        android:textColor="@color/writingColor2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/addtocard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/price"
        android:textAlignment="center"
        android:textColor="@color/writingColor1"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>